# publimatch-ai

./: .gitignore  docker-compose.yml
backend/: .gitignore  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 7402f2af5211_add_match_results_and_risk_assessments.py  a8e12734ff1f_init.py
backend/app/: main.py  schemas.py
backend/app/api/endpoints/: auth.py  health.py  manuscripts.py  matches.py  projects.py  tasks.py
backend/app/core/: __init__.py  celery_app.py  config.py  logging.py  security.py
backend/app/db/: database.py
backend/app/models/: __init__.py  journal.py  manuscript.py  match_result.py  project.py  risk_assessment.py  user.py
backend/app/services/: async_tasks.py  doaj_service.py  embedding_service.py  llm_service.py  openalex_service.py  risk_service.py  scoring_service.py
backend/tests/: conftest.py  helpers.py  test_auth.py  test_doaj.py  test_health.py  test_manuscripts.py  test_matches.py  test_projects.py  test_risk.py  test_scoring.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: Dropzone.tsx  Footer.tsx  Header.tsx  JournalCard.tsx  ScoreRing.tsx
frontend/src/lib/: auth.ts  config.ts
openspec/changes/publimatch-foundation/: design.md  proposal.md  spec.md  tasks.md
openspec/specs/async-worker/: spec.md
openspec/specs/doaj-verification/: spec.md
openspec/specs/health-monitoring/: spec.md
openspec/specs/journal-scoring/: spec.md
openspec/specs/risk-assessment/: spec.md
openspec/specs/user-auth/: spec.md
(+4 files in other folders)
